--- a/resume.template
+++ b/resume.template
@@ -93,12 +93,12 @@
         <div class="card-wrapper">
           <div class="card background-card">
 
-            <h4 id="about"> <span class="fa fa-lg fa-user"></span> <span class="title">About</span> </h4>
+            <h4 id="about"> <span class="fa fa-lg fa-user"></span> <span class="title">A propos de moi</span> </h4>
             <div class="card-nested" itemprop="description">
               <p> {{resume.basics.summary}} </p>
             </div>
 
-            <h4 id="work-experience"> <span class="fa fa-lg fa-pencil-square-o"></span> <span class="title">Work Experience</span> </h4>
+            <h4 id="work-experience"> <span class="fa fa-lg fa-pencil-square-o"></span> <span class="title">Experience</span> </h4>
             <ul class="list-unstyled">
               {{#each resume.work}}
                 <li class="card-nested">
@@ -127,7 +127,7 @@
               {{/each}}
             </ul>
 
-            <h4 id="skills"> <span class="fa fa-lg fa-code"></span> <span class="title">Skills</span> </h4>
+            <h4 id="skills"> <span class="fa fa-lg fa-code"></span> <span class="title">Compétences</span> </h4>
             <ul class="list-unstyled">
               {{#each resume.skills}}
                 <li class="card-nested skill {{skill_class}}">
@@ -182,7 +182,7 @@
             {{/if}}
 
             {{#if resume.volunteer}}
-            <h4 id="volunteer-work"><span class="fa fa-lg fa-child"></span> <span class="title">Volunteer Work</span> </h4>
+            <h4 id="volunteer-work"><span class="fa fa-lg fa-child"></span> <span class="title">Volontariat</span> </h4>
             <ul class="list-unstyled">
               {{#each resume.volunteer}}
                 <li class="card-nested">
@@ -232,7 +232,7 @@
             {{/if}}
 
             {{#if resume.interests}}
-            <h4 id="interests"> <span class="fa fa-lg fa-heart"></span> <span class="title">Interests</span> </h4>
+            <h4 id="interests"> <span class="fa fa-lg fa-heart"></span> <span class="title">Interêts</span> </h4>
             <ul class="list-unstyled">
               {{#each resume.interests}}
                 <li class="card-nested">
@@ -251,7 +251,7 @@
             {{/if}}
 
             {{#if resume.references}}
-            <h4 id="references"><span class="fa fa-lg fa-thumbs-up"></span> <span class="title">References</span> </h4>
+            <h4 id="references"><span class="fa fa-lg fa-thumbs-up"></span> <span class="title">Références</span> </h4>
             <ul class="list-unstyled">
               {{#each resume.references}}
                 <li class="card-nested">
@@ -267,7 +267,7 @@
             {{/if}}
 
             {{#if resume.languages}}
-            <h4 id="languages"><span class="fa fa-lg fa-language"></span> <span class="title">Languages</span> </h4>
+            <h4 id="languages"><span class="fa fa-lg fa-language"></span> <span class="title">Langues</span> </h4>
             <p class="card-nested">
               {{#each resume.languages}}
                 <span class="enumeration">
